--- a/Main.fmx
+++ b/Main.fmx
@@ -2,8 +2,8 @@ object Form1: TForm1
   Left = 0
   Top = 0
   Caption = 'BSplineInterpolation'
-  ClientHeight = 520
-  ClientWidth = 520
+  ClientHeight = 640
+  ClientWidth = 860
   Position = ScreenCenter
   FormFactor.Width = 320
   FormFactor.Height = 480
@@ -11,15 +11,25 @@ object Form1: TForm1
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   DesignerMasterStyle = 0
-  inline DrawViewer1: TDrawViewer
+  inline CurveChart1: TCurveChart
     Align = Client
     ClipChildren = True
+    Locked = True
     Margins.Left = 10.000000000000000000
     Margins.Top = 10.000000000000000000
     Margins.Right = 10.000000000000000000
     Margins.Bottom = 10.000000000000000000
-    Size.Width = 500.000000000000000000
-    Size.Height = 500.000000000000000000
+    Size.Width = 840.000000000000000000
+    Size.Height = 420.000000000000000000
     Size.PlatformDefault = False
+  end
+  object Panel1: TPanel
+    Align = Bottom
+    Position.Y = 440.000000000000000000
+    Size.Width = 860.000000000000000000
+    Size.Height = 200.000000000000000000
+    Size.PlatformDefault = False
+    StyleLookup = 'pushpanel'
+    TabOrder = 0
   end
 end
