--- a/Main.fmx
+++ b/Main.fmx
@@ -1,7 +1,7 @@
 object Form1: TForm1
   Left = 0
   Top = 0
-  Caption = 'BSplineInterpolation'
+  Caption = 'B-Spline Interpolation'
   ClientHeight = 510
   ClientWidth = 860
   Position = ScreenCenter
